[package]
name = "nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-panic = []
 
[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.26.0",features = ["metadata"]}
mpl-token-metadata = { version = "=1.9.0", features = ["no-entrypoint"] }
solana-program = "=1.14.13"
winnow="=0.4.1"
toml_datetime="=0.6.1"
spl-token-swap = { version="3.0.0", features = [ "no-entrypoint" ] }



